Fix Input Issues

--- a/css/grid.css
+++ b/css/grid.css
@@ -79,6 +79,14 @@ display: grid;
     margin-right: 2rem;
   }
 
+  input {
+    width: calc(100% - 2rem);
+  }
+
+  .footer-container {
+    padding: 2rem;
+  }
+
   .product-listing {
     grid-template-columns: 1fr;
   }
@@ -234,6 +242,14 @@ display: grid;
   .element-main {
     margin-left: 6rem;
     margin-right: 6rem;
+  }
+
+  input {
+    width: calc(100% - 6rem);
+  }
+
+  .footer-container {
+    padding: 6rem;
   }
 
   .checkout-cart {
