--- a/css/main.css
+++ b/css/main.css
@@ -1060,7 +1060,7 @@ textarea:focus-visible,textarea:focus-visible {
 
 .product-details{
   width: auto;
-  margin-top: 1rem;
+  margin-top: 6rem;
 }
 
 .product-details h5{
@@ -1076,10 +1076,8 @@ textarea:focus-visible,textarea:focus-visible {
 }
 
 .product-details p{
-  max-width: 25rem;
   margin-top: 0.5rem;
   margin-bottom: 2rem;
-  font-size: 2.5vw;
 }
 
 .item-add{
@@ -1106,7 +1104,6 @@ textarea:focus-visible,textarea:focus-visible {
   padding: 0.25rem;
   border: 2px solid var(--neutral-00);
   max-width: 14rem;
-  margin-left: 5rem;
 }
 
 .product-reccs img{
@@ -1130,8 +1127,8 @@ textarea:focus-visible,textarea:focus-visible {
 .product-review{
   border: 1px solid var(--blue-900);
   width: 90%;
-  height: 80%;
-  margin-top: 4rem;
+  height: 70%;
+  margin-top: 5rem;
   margin-bottom: 1rem;
 }
 
@@ -1178,7 +1175,7 @@ textarea:focus-visible,textarea:focus-visible {
 .product-review p{
   margin-left: 2rem;
   font-size: 1rem;
-  width: 80%;
+  width: 70%;
 }
 
 
@@ -1202,6 +1199,21 @@ textarea:focus-visible,textarea:focus-visible {
   align-items: center;
 }
 
+.about-content-text{
+  margin-left: 10rem;
+  margin-right: 3rem;
+}
+
+.about-content-text h2{
+  font-size: 3rem;
+}
+
+.about-founder-quote{
+  margin-left: 3rem;
+  margin-right: 7rem;
+  text-align: center;
+}
+
 .about-founder-quote h3{
   color: var(--neutral-700);
 }
@@ -1220,7 +1232,7 @@ textarea:focus-visible,textarea:focus-visible {
 }
 
 .about-images {
-  margin: 2rem auto;
+  margin: 5rem;
 }
 
 .about-images-product {
@@ -1232,12 +1244,6 @@ textarea:focus-visible,textarea:focus-visible {
   width: auto;
   max-width: 25rem;
 }
-
-.founder-images img{
-  width: auto;
-  max-width: 50rem
-}
-
 
 .about-images-product img{
   width: auto;
@@ -1442,45 +1448,6 @@ figure {
 }
 
 @media (min-width: 0rem) {
-  .element-main {
-    padding: 0rem 3rem;
-  }
-
-  .greeting-img-container {
-    display: flex;
-    flex-direction: row;
-    gap: 5rem;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .customer-support-feedback h2{
-    font-size: 4vw;
-  }
-
-  .customer-support-feedback label{
-    font-size: 3vw;
-  }
-
-  .about-content-text{
-    margin-left: 7.5rem;
-    margin-right: auto;
-  }
-
-  .about-founder-quote{
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-  }
-
-  .about-content-text-founder h3{
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 20rem;
-    font-size: 4vw;
-  }
-
   .event-img {
     align-items: end;
     max-width: 100%;
@@ -1501,14 +1468,14 @@ figure {
   }
 
   .event-title {
-    font-size: 6vw;
+    font-size: 3rem;
     max-width: 32rem;
     margin: 0 0 2rem 0;
     color: var(--bg);
   } 
 
   .event-container h4{
-    font-size: 4vw;
+    font-size: 1.1rem;
     margin: 6rem 0 0rem 0;
     color: var(--neutral-00);
   }
@@ -1516,119 +1483,13 @@ figure {
   .event-content {
     margin: 0 0 2rem 0;
     max-width: 32rem;
-    font-size: 2.5vw;
-    line-height: 3vw;
+    font-size: 1.1rem;
+    line-height: 1.6rem;
     color: var(--neutral-00);
-  }
-
-  .list-of-events p{
-    font-size: 2.5vw;
-  }
-
-  .about-nebula{
-    margin-top: 8rem;
-  }
-
-  .about-content-text h2{
-    font-size: 4vw;
-  }
-
-  .about-content-text p{
-    margin: 0;
-    max-width: 15rem;
-    font-size: 2.5vw;
-  }
-
-  .product-image img{
-    max-width: 25rem;
-  }
-
-  .item-add{
-    max-width: 25rem;
-  }
-}
-
-@media (min-width: 48rem) {
-  .product-details{
-    width: auto;
-    margin-top: 5rem;
-  }
-
-  .event-content {
-    margin: 0 0 2rem 0;
-    max-width: 32rem;
-    font-size: 2vw;
-    line-height: 2.5vw;
-    color: var(--neutral-00);
-  }
-
-  .list-of-events p{
-    font-size: 1.5vw;
-  }
-
-  .about-nebula{
-    margin-top: rem;
-  }
-
-  .about-content-text h2{
-    font-size: 3vw;
-  }
-
-  .about-content-text p{
-    max-width: 20rem;
-    font-size: 1.3vw;
-  }
-
-  .product-details p{
-    max-width: 35rem;
-    margin-top: 0.5rem;
-    margin-bottom: 2rem;
-    font-size: 1.2vw;
-  }
-
-  .product-image img{
-    max-width: 50rem;
-  }
-
-  .product-reccs{
-    background-color: var(--bg);
-    margin: 0rem;
-    padding: 0.25rem;
-    border: 2px solid var(--neutral-00);
-    max-width: 14rem;
-  }
-
-  .item-add{
-    max-width: 50rem;
   }
 }
 
 @media (min-width: 68rem) {
-
-  .about-content-text{
-    margin-left: 10rem;
-    margin-right: 3rem;
-  }
-
-  .about-content-text-founder{
-    margin-left: 5rem;
-    margin-right: 3rem;
-    text-align: center;
-  }
-
-  .about-content-text-founder h3{
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 25rem;
-    font-size: 2vw;
-  }
-
-  .about-founder-quote{
-    margin-left: 3rem;
-    margin-right: 7rem;
-    text-align: center;
-  }
-
   .event-img {
     align-items: end;
     width: 100vw;
@@ -1646,32 +1507,18 @@ figure {
     right:6rem;
     text-align: left;
   }
-
   .event-title {
     font-size: 3rem;
     max-width: 32rem;
     margin: 0 0 2rem 0;
     color: var(--bg);
   }  
-
   .event-content {
     margin: 0 0 2rem 0;
     max-width: 32rem;
     font-size: 1.1rem;
     line-height: 1.6rem;
     color: var(--neutral-00);
-  }
-
-  .list-of-events p{
-    font-size: 0.8rem;
-  }
-
-  .customer-support-feedback h2{
-    font-size: 3vw;
-  }
-
-  .customer-support-feedback label{
-    font-size: 1.5vw;
   }
 }
 
@@ -1699,7 +1546,6 @@ figure {
 }
 
 @media (min-width: 0rem) {
-
   .about-section {
     margin: 0;
     padding: 0;
@@ -1721,11 +1567,6 @@ figure {
     padding: 0;
     text-align: center;
   }
-
-  .founder-images img{
-    width: auto;
-    max-width: 30rem
-  }
 }
 
 @media (min-width: 60rem) {
@@ -1737,7 +1578,6 @@ figure {
     justify-content: flex-start; /* Align items to the left */
     align-items: flex-start; /* Align items to the top */
   }
-
   .about-img {
     margin: 0;
     padding: 0;
@@ -1747,19 +1587,12 @@ figure {
     object-fit: cover;
     display: block;
   }
-
   .about-container {
     margin: auto 0; /* Vertically center align when small */
     margin-right: 6rem;
     padding: 0;
     text-align: left;
   }
-
-  .founder-images img{
-    width: auto;
-    max-width: 45rem
-  }
-
 }
 
 /* 
