--- a/css/main.css
+++ b/css/main.css
@@ -459,6 +459,7 @@ select:invalid,select option[value=""] {
   transform: scale(1.8);
 }
 
+
 /* 
   TEXT ELEMENTS -------------------
 */
@@ -1214,6 +1215,14 @@ textarea:focus-visible,textarea:focus-visible {
   width: 70%;
 }
 
+.img-product-single{
+  transition: transform 0.2s;
+}
+
+.img-product-single:hover {
+  transform: scale(1.3);
+}
+
 @media (min-width: 30rem) { 
   .product-image{
     width: 90%;
@@ -1229,11 +1238,21 @@ textarea:focus-visible,textarea:focus-visible {
   .product-button{
     max-width: 30rem;
   }
+
+  .img-product-single {
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+    align-items: center;
+    max-width: 80rem;
+  }
+
 }
 
 @media (min-width: 68rem) { 
   .product-image img{
     width: auto;
+    max-width: 100rem;
     margin-left: auto;
     margin-right: auto;
     max-width: 100rem;
@@ -1265,11 +1284,13 @@ textarea:focus-visible,textarea:focus-visible {
 
   .product-reccs h4{
     font-size: 1.5vw;
+    margin-left: 2rem;
+    text-align: left;
   }
 
   .product-reccs h5{
     font-size: 1vw;
-    margin-left: 2.5rem;
+    margin-left: 2rem;
     font-weight: 100;
     text-align: left;
   }
