--- a/css/main.css
+++ b/css/main.css
@@ -1381,7 +1381,7 @@ textarea:focus-visible,textarea:focus-visible {
 
   .about-images-product img{
     width: auto;
-    max-width: 35rem;
+    max-width: 30rem;
   } 
 
   .founder-quote{
@@ -1392,13 +1392,16 @@ textarea:focus-visible,textarea:focus-visible {
 
   .about-founder-quote h3{
     color: var(--neutral-700);
-    font-size: 3vw;
+    font-size: 2.5vw;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
   }
 
   .about-founder-quote h5{
     font-weight: 100;
     color: var(--bg-1000);
-    font-size: 2vw;
+    font-size: 1.5vw;
   } 
 }
 
@@ -1418,7 +1421,7 @@ textarea:focus-visible,textarea:focus-visible {
 
   .about-images-product img{
     width: auto;
-    max-width: 60rem;
+    max-width: 45rem;
   } 
 
 }
