--- a/css/main.css
+++ b/css/main.css
@@ -505,9 +505,13 @@ select:invalid,select option[value=""] {
 
 .product-button {
   width: 100%;
-  max-width: 15rem;
   box-sizing: border-box;
   border: none;
+}
+
+.product-quantity-box {
+  max-width: 3rem;
+  max-height: 3rem;
 }
 
 .product-button:hover, .btn-secondary:focus {
@@ -671,7 +675,6 @@ small {
   display: flex;
   justify-self: flex-end;
 }
-
 
 .total-container {
   border-top: 0.5px solid var(--neutral-300);
@@ -1081,6 +1084,36 @@ textarea:focus-visible,textarea:focus-visible {
 /* PRODUCT PAGE  ----------------------
 */
 
+.product-page-name {
+  font-family: "GT Super Ds Trial", serif;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
+  color: var(--neutral-900);
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.product-page-color {
+  font-family: "GT Super Ds Trial", serif;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  text-align: left;
+  color: var(--neutral-700);
+}
+
+.product-desc-title {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.product-desc-body {
+  font-size: 1rem;
+  margin-top:1rem;
+  margin-bottom: 1rem;
+}
+
 .product-image{
   width: 90%;
   margin: 12rem auto auto auto;
@@ -1093,29 +1126,27 @@ textarea:focus-visible,textarea:focus-visible {
 }
 
 .product-details{
-  width: auto;
   margin-top: 2rem;
 }
 
-.product-details h5{
-  text-align: unset;
-  font-weight: 100;
-  margin-bottom: 0rem;
+@media (min-width: 0rem) {
+  .product-details {
+    margin-left: 6rem;
+    margin-right: 6rem;
+  }
 }
 
-.product-details h3{
-  color: var(--neutral-900);
-  margin-top: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-.product-details p{
-  margin-top: 0.5rem;
-  margin-bottom: 2rem;
+@media (min-width: 60rem) {
+  .product-details {
+    margin-left: 0rem;
+    margin-right: 6rem;
+  }
 }
 
 .item-add{
-  margin-top: 1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .item-add input{
@@ -1172,23 +1203,6 @@ textarea:focus-visible,textarea:focus-visible {
   margin-bottom: 5rem;
 }
 
-.overall-review h2{
-  font-size: 4.5rem;
-  color: var(--neutral-900);
-  margin-left: 3rem;
-  margin-right: auto;
-  margin-bottom: 0rem;
-  margin-top: 2rem;
-}
-
-.overall-review h3{
-  color: var(--neutral-900);
-}
-
-.related-items h3{
-  color: var(--neutral-900);
-}
-
 .overall-review img{
   max-width: 13rem;
   margin-left: auto;
@@ -1215,11 +1229,7 @@ textarea:focus-visible,textarea:focus-visible {
 }
 
 .img-product-single{
-  transition: transform 0.2s;
-}
-
-.img-product-single:hover {
-  transform: scale(1.3);
+  background-color: var(--bg);
 }
 
 @media (min-width: 30rem) { 
@@ -1232,10 +1242,6 @@ textarea:focus-visible,textarea:focus-visible {
   .product-details{
     width: auto;
     margin-top: 4rem;
-  }
-
-  .product-button{
-    max-width: 30rem;
   }
 
   .img-product-single {
@@ -1255,23 +1261,6 @@ textarea:focus-visible,textarea:focus-visible {
     margin-left: auto;
     margin-right: auto;
     max-width: 100rem;
-  }
-
-  .product-details h3{
-    font-size: 3vw;
-  }
-
-  .product-details h4{
-    margin-top: 1rem;
-    font-size: 2vw;
-  }
-
-  .product-details h5{
-    font-size: 1.5vw;
-  }
-
-  .product-details p{
-    font-size: 1vw;
   }
 
   .product-reccs img{
